# FastAPI-Blog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/app/: .env.sample  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 8f1f65be549e_add_new_fields.py  c2a4de57d141_inital_migration.py  cfa0b5d16560_initial_migration.py
backend/app/api/: deps.py
backend/app/api/routes/: comments.py  post.py
backend/app/core/: config.py
backend/app/crud/: comment.py  post.py
backend/app/models/: comment.py  post.py  user.py
backend/app/schemas/: comment.py  post.py
backend/app/utils/: general.py  tasks.py
